[package]
name = "ow-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-cors = "0.6"
serde = { version = "1", features = ["derive"] }
serde_repr = "0.1"
serde_json = "1"
reqwest = { version = "0.11", features = ["rustls-tls"], default-features = false }
scraper = "0.14"
tokio = "1.25"
redis = { version = "0.22", features = ["tokio-comp", "json"] }
url = "2"
anyhow = "1"
num = "0.4"
num-derive = "0.3.3"
num-traits = "0.2.15"
bb8 = "0.8.0"
bb8-redis = "0.12.0"
slog = "2.7"
slog-term = "2.9"
slog-async = "2.7"
